fixing the alignment issues

--- a/SpaceTravelSite/space-tourism-website-main/starter-code/index.css
+++ b/SpaceTravelSite/space-tourism-website-main/starter-code/index.css
@@ -504,6 +504,19 @@ body {
     margin-top: 2.5rem;
 }
 
+@media (min-width: 35rem) {
+    .numbered-title {
+        justify-self: start;
+        margin-top: 2rem;
+    }
+
+    .destination-meta {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+}
+
+
 @media (min-width: 45em) {
     .grid-container {
         text-align: left;
@@ -511,16 +524,33 @@ body {
         grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(1rem, 1fr);
     }
     
-    .grid-container > *:first-child {
-        grid-column: 2;
-    }
-
-    .grid-container > *:last-child {
-        grid-column: 3;
-    }
-    
     .grid-container--home {
         padding-bottom: max(6rem, 20vh);
         align-items: end;
+    }
+
+    .grid-container--home > *:first-child {
+        grid-column: 2;
+    }
+
+    .grid-container--home > *:last-child {
+        grid-column: 3;
+    }
+
+    .grid-container--destination {
+        justify-items: center;
+        grid-template-areas: 
+        '. title title'
+        '. image tabs'
+        '. image content';
+    }
+
+    .grid-container--destination > img {
+        max-width: 100%;
+    }
+    
+    .destination-meta {
+        --gap: 6rem;
+        justify-content: start;
     }
 }
